# MediaHelp

./: .dockerfile  .dockerignore  .gitignore  README.md  requirements.txt  start.sh
backend/: alembic.ini  config.dev.yaml  config.prod.yaml  dev.db  init.py  main.py  pyproject.toml  scheduled.yaml  start.py
backend/api/: auth.py  cloud189.py  deps.py  douban.py  emby.py  logs.py  main.py  notify.py  proxy.py  quark.py  resource.py  scheduled.py  sysSetting.py  tg_resource.py
backend/config/: config.dev.yaml  config.prod.yaml  notify.yaml  scheduled.yaml  sys.yaml
backend/crud/: base.py  config.py  database.py  sysSetting.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 4545b41f358d_add_system_setting.py  94f84e90e53a_initial_migration.py
backend/models/: base.py  sysSetting.py  user.py
backend/schemas/: auth.py  emby.py  log.py  response.py  sysSetting.py  user.py
backend/task/: cloud189_auto_save.py  quark_auto_save.py
backend/tests/: test_proxy.py
backend/utils/: auth.py  auth_middleware.py  config_manager.py  down_load_to_fn.py  emby_manager.py  exceptions.py  http_client.py  init_db.py  logger_service.py  magic_rename.py  notify_manager.py  quark_helper.py  quark_sdk.py  scheduled_manager.py  scheduler.py  sys_config.py  tg_resource_sdk.py
backend/utils/cloud189/: __init__.py  auth.py  client.py  const.py  error.py  types.py  util.py
frontend/: pnpm-lock.yaml
frontend/apps/web-antd/: .env  .env.development  .env.production  index.html  nginx.conf  vite.config.mts
frontend/apps/web-antd/src/: preferences.ts
(+35 files in other folders)
