[project]
name = "mediahelper-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "sqlalchemy>=2.0.0",
    "alembic",
    "python-dotenv",
    "email-validator",
    "aiosqlite",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "loguru>=0.7.3",
    "bcrypt==3.2.0",
    "httpx>=0.28.1",
    "chardet>=5.2.0",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "aiohttp>=3.12.11",
    "pycryptodome>=3.23.0",
    "croniter>=2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
